Fix [General] Long names are cropped (#656)

--- a/src/common/Tooltip/tooltip.scss
+++ b/src/common/Tooltip/tooltip.scss
@@ -1,6 +1,9 @@
 .tooltip {
   position: fixed;
   z-index: 10;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
   white-space: nowrap;
   word-break: break-word;
 }
