--- a/src/elements/TooltipTemplate/textTooltipTemplate.scss
+++ b/src/elements/TooltipTemplate/textTooltipTemplate.scss
@@ -6,6 +6,7 @@
     padding: 6px 8px;
     color: $white;
     white-space: pre-wrap;
+    word-break: break-word;
     background-color: $primary;
     border-radius: 4px;
   }
